fix: adds style fallback when slides length < visible slides

--- a/frontend/styles/components/homepage/slider-section.scss
+++ b/frontend/styles/components/homepage/slider-section.scss
@@ -27,6 +27,14 @@
       cursor: auto !important;
     }
   }
+
+  &.-auto-width {
+    > div {
+      > div {
+        width: auto !important;
+      }
+    }
+  }
 }
 
 .slide-next,
